modification de la logique du stockage des projets

--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Karsten | Portfolio</title>
+
+    
+    <link rel="icon" type="image/png" href="/assets/images/Karsten.webp" />
+
+   
+    <meta name="description" content="Portfolio de Karsten - Développeur Front-End passionné par la création d'expériences web modernes et performantes." />
+
+    
+    <meta property="og:title" content="Karsten | Portfolio" />
+    <meta property="og:description" content="Découvrez mon travail et mes projets en développement web." />
+    <meta property="og:image" content="/assets/images/Karsten.webp" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://karstenwt.github.io/portfolio/" />
+
   </head>
   <body>
     <div id="root"></div>
